# ocean-perception

./: .gitignore  CMakeLists.txt  README.md  package.xml
lcmtypes/: CMakeLists.txt  depth_measurement_t.lcm  header_t.lcm  image_t.lcm  imu_measurement_t.lcm  imu_t.lcm  mag_measurement_t.lcm  mesh_stamped_t.lcm  mesh_t.lcm  mesh_triangle_t.lcm  mmf_image_t.lcm  mmf_stereo_image_t.lcm  point3_t.lcm  pose3_stamped_t.lcm  pose3_t.lcm  quaternion_t.lcm  range_measurement_t.lcm  range_t.lcm  stereo_image_t.lcm  vector3_t.lcm
src/auv/core/: CMakeLists.txt  cv_types.hpp  eigen_types.hpp  file_utils.hpp  grid_lookup.hpp  image_util.hpp  imu_measurement.hpp  line_feature.hpp  line_segment.hpp  macros.hpp  math_util.cpp  math_util.hpp  params_base.hpp  pinhole_camera.hpp  pinhole_model.hpp  random.hpp  stereo_camera.hpp  stereo_image.hpp  thread_safe_queue.hpp  timedelta.hpp  timer.hpp  timestamp.hpp  transform_util.hpp  yaml_parser.hpp
src/auv/dataset/: CMakeLists.txt  data_provider.cpp  data_provider.hpp  euroc_dataset.cpp  euroc_dataset.hpp  euroc_provider.cpp  euroc_provider.hpp  himb_dataset.cpp  himb_dataset.hpp  stereo_dataset.cpp  stereo_dataset.hpp
src/auv/math_util/: CMakeLists.txt  math_util.cpp  math_util.hpp
src/auv/ros/: CMakeLists.txt  odometry_frontend_ros.cpp  odometry_frontend_ros.hpp
src/auv/tag_detector/: CMakeLists.txt  debug_image_node.cpp
src/auv/vio/: CMakeLists.txt  _state_estimator.cpp  _state_estimator.hpp  feature_detector.cpp  feature_detector.hpp  feature_tracker.cpp  feature_tracker.hpp  imu_manager.cpp  imu_manager.hpp  item_history.hpp  landmark_observation.hpp  odometry_manager.hpp  optimize_odometry.hpp  pose_history.hpp  smoother.cpp  smoother.hpp  state_ekf.cpp  state_ekf.hpp  state_estimate_3d.hpp  state_estimator.cpp  state_estimator.hpp  state_estimator_types.hpp  state_filter.cpp  state_filter.hpp  stereo_frontend.cpp  stereo_frontend.hpp  stereo_matcher.cpp  stereo_matcher.hpp  stereo_tracking_result.hpp  visualization_2d.cpp  visualization_2d.hpp  visualizer_3d.cpp  visualizer_3d.hpp
src/auv/viz/: CMakeLists.txt  colormap.hpp  visualize_matches.cpp  visualize_matches.hpp
src/auv/vo/: CMakeLists.txt  feature_matching.cpp  feature_matching.hpp  line_detector.cpp  line_detector.hpp  odometry_frontend.cpp  odometry_frontend.hpp  optimization.cpp  optimization.hpp  pl_optimization.cpp  pl_optimization.hpp  point_detector.cpp  point_detector.hpp
src/lcm_nodes/: CMakeLists.txt  README.md  object_mesher_lcm.cpp  state_estimator_lcm.cpp
src/sandbox/cuda_examples/: CMakeLists.txt  README.md  add_arrays.cu  get_subpixel.cu  gpu_image.cu  parallel_rows.cu  patchmatch.cu
src/sandbox/flame_demo/: CMakeLists.txt  main.cpp
src/sandbox/mesher_demo/: CMakeLists.txt  grid_lookup.hpp  main.cpp  neighbor_grid.cpp  neighbor_grid.hpp  object_mesher.cpp  object_mesher.hpp
src/tools/lcm_image_viewer/: CMakeLists.txt  main.cpp
src/tools/vio_dataset_player/: CMakeLists.txt  main.cpp
src/tools/zed_recorder/: CMakeLists.txt  main.cpp  zed_recorder.cpp  zed_recorder.hpp
src/vehicle/: CMakeLists.txt
src/vehicle/core/: CMakeLists.txt  axis3.hpp  color_mapping.cpp  color_mapping.hpp  cv_types.hpp  data_manager.hpp  data_subsampler.cpp  data_subsampler.hpp  depth_measurement.hpp  eigen_types.hpp  file_utils.cpp  file_utils.hpp  fixed_queue.hpp  grid_lookup.hpp  image_util.cpp  image_util.hpp  imu_measurement.hpp  landmark_observation.hpp  mag_measurement.hpp  make_unique.hpp  math_util.cpp  math_util.hpp  params_base.cpp  params_base.hpp  path_util.hpp  pinhole_camera.cpp  pinhole_camera.hpp  random.cpp  random.hpp  range_measurement.hpp  sliding_buffer.hpp  stats_tracker.cpp  stats_tracker.hpp  stereo_camera.cpp  stereo_camera.hpp  stereo_image.hpp  thread_safe_queue.hpp  timer.cpp  timer.hpp  timestamp.hpp  (+5 more)
src/vehicle/dataset/: CMakeLists.txt  acfr_dataset.cpp  acfr_dataset.hpp  caddy_dataset.cpp  caddy_dataset.hpp  data_provider.cpp  data_provider.hpp  dataset_util.hpp  euroc_data_writer.cpp  euroc_data_writer.hpp  euroc_dataset.cpp  euroc_dataset.hpp  himb_dataset.cpp  himb_dataset.hpp
src/vehicle/feature_tracking/: CMakeLists.txt  feature_detector.cpp  feature_detector.hpp  feature_tracker.cpp  feature_tracker.hpp  stereo_matcher.cpp  stereo_matcher.hpp  stereo_tracker.cpp  stereo_tracker.hpp  visualization_2d.cpp  visualization_2d.hpp
src/vehicle/imaging/: CMakeLists.txt  README.md  attenuation.cpp  attenuation.hpp  backscatter.hpp  enhance.hpp  illuminant.cpp  illuminant.hpp  io.cpp  io.hpp  normalization.hpp
src/vehicle/lcm_util/: CMakeLists.txt  decode_image.cpp  decode_image.hpp  image_subscriber.cpp  image_subscriber.hpp  util_depth_measurement_t.hpp  util_imu_measurement_t.hpp  util_mag_measurement_t.hpp  util_mesh_t.hpp  util_pose3_t.hpp  util_vector3_t.hpp  (+1 more)
test/: CMakeLists.txt  test_move.cpp
test/core/: data_manager_test.cpp  grid_lookup_test.cpp  math_util_test.cpp  params_base_test.cpp  sliding_buffer_test.cpp  stereo_camera_test.cpp
test/dataset/: euroc_dataset_test.cpp  euroc_provider_test.cpp  himb_dataset_test.cpp
test/feature_tracking/: feature_detector_test.cpp  feature_tracker_test.cpp  stereo_matcher_test.cpp
test/gtest/: gtest-all.cc
test/imaging/: enhance_test.cpp
test/lcmtypes/: test_include.cpp  test_publish.cpp
test/mesher/: landmark_graph_test.cpp
test/resources/: depthLFT_3374.tif  test_struct_params.yaml
test/rrt/: rrt_test.cpp
test/stereo/: test_stereo.cpp
test/stereo_matching/: patchmatch_gpu_test.cpp  patchmatch_test.cpp  sgbm_test.cpp
test/vio/: attitude_factor_test.cpp  backend_test.cpp  data_manager_test.cpp  ellipsoid_test.cpp  feature_detector_test.cpp  feature_matching_test.cpp  feature_tracker_test.cpp  imu_manager_test.cpp  mag_pose_factor_test.cpp  single_axis_factor_test.cpp  state_ekf_test.cpp  state_estimator_test.cpp  stereo_frontend_test.cpp  stereo_matcher_test.cpp  trilateration_test.cpp  viz_test.cpp
test/vision_core/: line_util_test.cpp
test/vo/: feature_matching_test.cpp  line_detector_test.cpp  optimization_test.cpp  point_detector_test.cpp  vo_test.cpp
(+152 files in other folders)
